# trails

./: .~lock.907026181642679041.pdf.csv#  .~lock.a.csv#  .~lock.b.csv#  .~lock.bigram_list.csv#  .~lock.one.csv#  .~lock.tri_list.csv#  907026181642679041.pdf.csv  bigram_list.csv  output.csv  pyproject.toml  tri_list.csv
n_gram_implementation/: pyproject.toml
n_gram_implementation/tests/: tests.py
parser/: parser_table.py
src/all_projects/: n_gram.py  trail.py
src/root/: n_gram.py  parser_table.py  pdf_extract.py  tmp.py  trail.py
tests/: temp.py  tests.py
tests/temp/: .~lock.3_govt_urls_state_only.csv#  .~lock.output.csv#  .~lock.patter.csv#  .~lock.top.csv#  907026181642679041.pdf.csv  abc-page-48-table-1.csv  data.txt  data_set.csv  def-page-3-table-1.csv  grams_in_bi_g.csv  grams_in_binary.csv  grams_in_binarycsv  grams_in_ternary.csv  grams_in_ternarycsv  one.pdf.csv  outbreak_late907026181642679041.pdf.csv  output.csv  patter.csv  three.pdf.csv  tmp.csv  top.csv
