[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "n_gram_trail"
version = "0.0.1"
authors = [
    { name="Example Samrat", email="samratthapa0606@gmail.com" },
]
description = "n-gram implmentation package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent", 
]

